# URJALink

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend.dockerignore  Makefile  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml  main.py  pyproject.toml  rename_app.py  requirements.txt
api/: __init__.py  routes.py
business_logic/: __init__.py  agent_orchestrator.py  area_analysis.py  aws_rekognition_service.py  bill_comparison.py  bill_extractor.py  cv_roof_analysis.py  do_gradient_service.py  electricity_savings_agent.py  equity_calculator.py  financial_analysis.py  google_maps_service.py  huggingface_cv_service.py  incentive_agent.py  installer_finder_agent.py  pdf_parser.py  roof_analysis.py  solar_calculations.py  solar_data.py  summary_agent.py
core/: __init__.py  config.py  constants.py  geometry.py  numeric.py  panels.py
data/: india_electricity_rates.json  india_install_costs.json  install_costs_2024.json  precomputed_equity_data.py
data_access/: __init__.py  country_detector.py  economic_data.py  india_economic_data.py
models/: __init__.py  economics.py  equity_models.py  financial.py  requests.py  responses.py
scripts/: calc_area.py
tests/: test_agents.py  test_analyze_financials.py  test_bill_comparison.py  test_bill_comparison_api.py  test_economic_data.py  test_geometry_area.py  test_http_stream.py  test_incentive_agent.py  test_installer_agent.py  test_panels.py  test_raw_stream.py  test_solar_determinism.py  test_streaming_manual.py  test_summary_agent.py
ui/: .dockerignore  (+11 more)
(+167 files in other folders)
