[project]
name = "urjalink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "boto3>=1.29.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-image>=0.22.0",
    "dedalus-labs",
    "pypdf>=3.17.0",
    "scalar-fastapi>=1.8.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.8",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
